# OS_Kernel

./: CMakeLists.txt  OS_CEP_Technical_Implementation_Plan.docx  PHASE_0_COMPLETE.md  PHASE_1_RUN_GUIDE.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md  PHASE_5_PRESENTATION_OUTLINE.md  PROJECT_COMPLETION_SUMMARY.md  README.md  config.json  index.html  simulator  task.md
.github/workflows/: deploy-graph-pages.yml
OS_Simulator_Qt/: CMakeLists.txt
OS_Simulator_Qt/build-linux/: CMakeCache.txt
OS_Simulator_Qt/src/: deadlock_widget.cpp  deadlock_widget.h  gantt_widget.cpp  gantt_widget.h  main.cpp  main_window.cpp  main_window.h  philosophers_widget.cpp  philosophers_widget.h  simulator_client.cpp  simulator_client.h  sync_timeline_widget.cpp  sync_timeline_widget.h
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  index.html
output/: metrics_FCFS.csv  metrics_Priority.csv  metrics_RoundRobin.csv
src/: main.cpp
src/deadlock/: DeadlockDetector.cpp  DeadlockDetector.h  DeadlockSimulator.cpp  DeadlockSimulator.h  Resource.h
src/memory/: MemorySimulator.cpp  MemorySimulator.h
src/network/: SchedulerStateJSON.cpp  SchedulerStateJSON.h  TCPServer.cpp  TCPServer.h
src/process/: PCB.h  ProcessManager.cpp  ProcessManager.h  StateTransition.cpp  StateTransition.h  TCB.h  ThreadManager.cpp  ThreadManager.h
src/scheduler/: FCFS.cpp  FCFS.h  Metrics.cpp  Metrics.h  Priority.cpp  Priority.h  RoundRobin.cpp  RoundRobin.h  Scheduler.h
src/sync/: OsMutex.h  OsSemaphore.h  SyncDemoRunner.cpp  SyncDemoRunner.h  SyncTypes.h
src/utils/: Config.cpp  Config.h  Logger.cpp  Logger.h  ThreadSafeQueue.h
